--- a/utils/eye_config.json
+++ b/utils/eye_config.json
@@ -1,8 +1,8 @@
 {
-  "calibrated_center": [
-    null,
-    null
-  ],
-  "sensitivity_x": 100,
-  "sensitivity_y": 100
+  "x_min": -20,
+  "x_max": 20,
+  "y_min": -20,
+  "y_max": 20,
+  "z_min": -20,
+  "z_max": 20
 }
